# PersonDetector

./: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  PersonDetector  README.md  cmake_install.cmake
src/: PersonDetector.cpp  PersonDetector.h  ResizeFunctions.cpp  ResizeFunctions.h
src/libsvm-3.20/: svm.cpp
